--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,13 +4,12 @@ spring:
   profiles:
     active: staging
   datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: password
+    url: jdbc:postgresql://localhost:5432/catalogdb
+    driver-class-name: org.postgresql.Driver
+    username: cataloguser
+    password: catalogpass
   jpa:
-    database: h2
-    database-platform: org.hibernate.dialect.H2Dialect
-    generate-ddl: true
-    show-sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: update
 message: Dev profile
